# bavu-iru

./: .gitignore  PLAN.md  README.md  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-04-13-entry-ui.md  2026-04-15-phase2-implementation.md  2026-04-16-phase3-clipboard-autolock-tray.md  2026-05-14-import-export.md
docs/superpowers/specs/: 2026-04-13-entry-ui-design.md  2026-04-15-phase2-design.md  2026-04-16-phase3-clipboard-autolock-tray-design.md  2026-05-14-import-export-design.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  entries.rs  folders.rs  generator.rs  import_export.rs  mod.rs  strength.rs  tags.rs  vault.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  keyring.rs  mod.rs  strength.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/security/: autolock.rs  clear.rs  mod.rs
src/lib/components/: EntryDetail.svelte  EntryForm.svelte  EntryList.svelte  ExportConfirm.svelte  FolderTree.svelte  ImportExport.svelte  ImportPreview.svelte  LockScreen.svelte  PasswordField.svelte  PasswordGenerator.svelte  PasswordStrength.svelte  Settings.svelte  TagCloud.svelte  Toast.svelte
src/lib/lib/: idleTimer.ts  theme.ts
src/lib/stores/: entries.ts  folders.ts  settings.ts  tags.ts  vault.ts
src/lib/utils/: tauri.ts
src/routes/: +page.svelte
